GeckoCodes: Fix Sorting of Specific Gecko Codes

--- a/Data/User/GameSettings/GMPE01.ini
+++ b/Data/User/GameSettings/GMPE01.ini
@@ -1,76 +1,9 @@
-[OnLoad]
-# Add memory patches to be loaded once on boot here.
-[OnFrame]
-# Add memory patches to be applied every frame here.
-[ActionReplay]
-$All Mini Games Unlocked
-0218FDF0 0003FFFF
-$Player 1 Max Coins
-0218FC54 000003E7
-$Player 1 No Coins
-0218FC54 00000000
-$Player 1 Max Stars
-0218FC62 000003E7
-$Player 1 No Stars
-0218FC62 00000000
-$Player 1 Always Has Magic Lamp
-0018FC3D 0000000C
-$Player 2 Max Coins
-0218FC84 000003E7
-$Player 2 No Coins
-0218FC84 00000000
-$Player 2 Max Stars
-0018FC92 000003E7
-$Player 2 No Stars
-0018FC92 00000000
-$Player 2 Always Has Magic Lamp
-0018FC6D 0000000C
-$Player 3 Max Coins
-0218FCB4 000003E7
-$Player 3 No Coins
-0218FCB4 000003E7
-$Player 3 Max Stars
-0218FCC2 000003E7
-$Player 3 No Stars
-0218FCC2 00000000
-$Player 3 Always Has Magic Lamp
-0018FC9D 0000000C
-$Player 4 Max Coins
-0218FCE4 000003E7
-$Player 4 No Coins
-0218FCE4 00000000
-$Player 4 Max Stars
-0218FCF2 000003E7
-$Player 4 No Stars
-0218FCF2 00000000
-$Player 4 Always Has Magic Lamp
-0018FCCD 0000000C
-$Hold Y To Roll 10
-3A1E67F0 00000800
-0416B928 41200000
-$Hold L To Roll 1
-3A1E67F0 00000040
-0416B928 3F000000
-$L+X No More Moves(Use While Moving)
-8A1E67F0 00000440
-0018FC42 00000001
-0018FC72 00000001
-0018FCA2 00000001
-0018FCD2 00000001
-00000000 40000000
-$L+Y Infinite Moves(While Moving)
-8A1E67F0 00000840
-0018FC42 0000000A
-0018FC72 0000000A
-0018FCA2 0000000A
-0018FCD2 0000000A
-00000000 40000000
-$Press Z+R To Be On Turn 20
-0A1E67F0 00000030
-0018FCFC 00000014
-$Press Z+L To Be On Turn 1
-0A1E67F0 00000050
-0018FCFC 00000001
+# ----------------------------------------------------
+# Mario Party Netplay's Mario Party 4 Cheat Database
+# Please visit: https://discord.com/invite/vMNjm98
+# And if you're looking at this, tell Sly hello!
+# ----------------------------------------------------
+
 [Gecko]
 $!!! - README
 *Mario Party 4 cheats can cause the game to set anyone to 999 Coins. Be aware
@@ -84,7 +17,6 @@ c2073c7c 00000002
 60000000 00000000
 *This cheat fixes a bug where only analog inputs work while using the triggers.
 *
-*
 $!!! - Faster Animations [gamemasterplc]
 040786a0 c02281f0
 0406e314 c02281f0
@@ -92,6 +24,7 @@ $!!! - Faster Animations [gamemasterplc]
 *
 $!!! - Faster Boot Time [Ralf]
 04056168 38607FFF
+*Use This Cheat to Get into the Action Faster
 *
 $!!! - Increased Board Speed [gamemasterplc]
 04066dd8 38c0000d
@@ -164,17 +97,9 @@ $Bonus - Free Stars [gamemasterplc]
 04084720 38800000
 *This cheat makes Stars cost nothing instead of the usual 20 coins.
 *
-*
 $Bonus - Kill Music [gamemasterplc]
 041d3d1c 00000001
 *This cheat makes it so all in-game music will be turned off.
-*
-*
-$Bonus - Warping Frenzy
-0408945c 3b600005
-04089460 9b630005
-04089468 48000040
-*
 *
 $Game Mechanics - Free Lottery Game [Celerizer]
 0407b28c 38600005
@@ -213,7 +138,6 @@ $Game Mechanics - Mega Status No Longer Steals Coins [gamemasterplc]
 0406be1c 38600000
 *This cheat makes the Mega Mushroom not steal coins.
 *
-*
 $Game Mechanics - Mini Pipes Work at Normal Size [gamemasterplc]
 04066348 60000000
 04064ed0 60000000
@@ -231,7 +155,7 @@ $Minigame - Take a Breather: Mash Only L [gamemasterplc]
 e2000001 80008000
 *This cheat makes this minigame easier to play.
 *
-$30FPS Code
+$Mod - 30Hz Code [gamemasterplc]
 041D3B00 40000000
 041D3B04 00000002
 04035480 38600001
@@ -245,6 +169,8 @@ C200592C 00000009
 3C808000 6084D01C
 7C8903A6 4E800421
 60000000 00000000
+*Makes the game run at 30Hz but still feel like 60FPS. Great for people with bad PCs
+*Can break Certain Minigames
 *
 [Gecko_Enabled]
 $!!! - README
