--- a/Data/User/GameSettings/GP6E01.ini
+++ b/Data/User/GameSettings/GP6E01.ini
@@ -1,7 +1,9 @@
-[OnLoad]
-# Add memory patches to be loaded once on boot here.
-[OnFrame]
-# Add memory patches to be applied every frame here.
+# ----------------------------------------------------
+# Mario Party Netplay's Mario Party 6 Cheat Database
+# Please visit: https://discord.com/invite/vMNjm98
+# And if you're looking at this, tell Sly hello!
+# ----------------------------------------------------
+
 [Gecko]
 $!!! - Faster Boot Time [gamemasterplc]
 204cdc74 386003e8
@@ -14,7 +16,7 @@ e2000001 80008000
 204CCE7C 3BDE0001
 044CCE7C 3BC00DB6
 E2000001 80008000
-*
+*Use This Cheat to Get into the Action Faster
 *
 $!!! - Increased Board Speed [gamemasterplc]
 041556d4 7d170e70
@@ -28,7 +30,6 @@ e2000001 80008000
 042c3e94 42200000
 *This cheat makes the players move faster while playing a Mario Party board.
 *
-*
 $!!! - Increased Coin Gain/Loss Speed [gamemasterplc]
 c21c28bc 00000002
 801f0020 38800002
@@ -37,7 +38,6 @@ c21c245c 00000002
 801f0020 38800002
 7c0027d6 00000000
 *This cheat makes the coin animation appear faster then the stock animation.
-*
 *
 $!!! - Increased Orb Throwing Speed [gamemasterplc]
 c21c28bc 00000002
@@ -48,19 +48,15 @@ c21c245c 00000002
 7c0027d6 00000000
 *This cheat makes orbs appear to be thrown faster.
 *
-*
 $!!! - Increased Taunt Capabilities [gamemasterplc]
 0420526c 60000000
 0420518c 60000000
 0420516c 60000000
 *This cheat makes it so you can taunt during your turn.
 *
-*
-*
 $!!! - Instant Text Display [gamemasterplc]
 0404f51c 38000000
 *This cheat makes it so text is displayed instantly.
-*
 *
 $!!! - Miscellaneous - Show Controller Port Number of Who Paused in Mini-Games [gamemasterplc]
 c20456d4 00000002
@@ -88,38 +84,7 @@ A81F01A0 7C001838
 1400000C 60000000
 E0000000 80008000
 *
-$Bonus - Free Stars [gamemasterplc]
-0418333c 2c030000
-0418342c 2c030000
-041834c4 2c030000
-c2183590 00000002
-38800000 7c8400d0
-60000000 00000000
-0415f668 2c030000
-0415fa18 38800000
-204dac30 7c641b78
-044dac30 388000ff
-044db9dc 38800000
-e2000001 80008000
-*This cheat makes Stars cost nothing instead of the usual 20 coins.
-*
-*
-$Bonus - Kill Music [Ralf]
-042c02a4 00000001
-*This cheat makes it so all in-game music will be turned off.
-*
-*
-*
-$Bonus - Random Music [gamemasterplc]
-c214427c 00000004
-7c7d1b78 3860006e
-3c808003 6084fcd4
-7c8903a6 4e800421
-7c7d1b78 00000000
-*This cheat makes the music selection totally random.
-*
-*
-$Bonus - Snowflake Lake - Chomps Sell Stars (40 Coins), Players Start with 0 Stars [gamemasterplc]
+$Board - Snowflake Lake - Chomps Sell Stars (40 Coins), Players Start with 0 Stars [gamemasterplc]
 0418040c 480000f0
 204cadfc 48001595
 48000000 802c0364
@@ -164,218 +129,36 @@ c24cc390 00000021
 044cb09c 480000a0
 e2000001 80008000
 *
+$Bonus - Free Stars [gamemasterplc]
+0418333c 2c030000
+0418342c 2c030000
+041834c4 2c030000
+c2183590 00000002
+38800000 7c8400d0
+60000000 00000000
+0415f668 2c030000
+0415fa18 38800000
+204dac30 7c641b78
+044dac30 388000ff
+044db9dc 38800000
+e2000001 80008000
+*This cheat makes Stars cost nothing instead of the usual 20 coins.
 *
+$Bonus - Kill Music [Ralf]
+042c02a4 00000001
+*This cheat makes it so all in-game music will be turned off.
 *
-$Bonus - Unfair Mario Party [CrankySupertoon, gamemasterplc, Celerizer, Mega, Ralf]
-0415f1e8 38800001
-0415f278 3880ffec
+$Bonus - Random Music [gamemasterplc]
 c214427c 00000004
 7c7d1b78 3860006e
 3c808003 6084fcd4
 7c8903a6 4e800421
 7c7d1b78 00000000
-f6000002 80008180
-d8010048 8081004c
-98810038 881d000c
-14000004 388000ff
-14000040 386000ff
-1400007c 380000ff
-e0000000 80008000
-04011644 380000ff
-0401164c 380000ff
-04011654 380000ff
-04186608 38000003
-04186b80 4bfffff8
-f6000001 80008180
-41820118 2c170000
-14000000 60000000
-e0000000 80008000
-f6000001 80008180
-88030006 541cdf7e
-d2000000 00000002
-3800002e 98030006
-60000000 00000000
-e0000000 80008000
-20517ab8 408000b8
-04517ab8 480000b8
-e2000001 80008000
-28265ba8 00000000
-02265ba8 00000013
-e2000001 80008000
-28265ba8 00000004
-02265ba8 00000002
-e2000001 80008000
-28265ba8 00000006
-02265ba8 00000013
-e2000001 80008000
-28265ba8 00000007
-02265ba8 00000009
-e2000001 80008000
-28265ba8 0000000a
-02265ba8 0000000a
-e2000001 80008000
-28265ba8 0000000b
-02265ba8 0000000a
-e2000001 80008000
-28265ba8 0000000d
-02265ba8 00000005
-e2000001 80008000
-28265ba8 00000011
-02265ba8 0000000e
-e2000001 80008000
-28265ba8 00000012
-02265ba8 0000000f
-e2000001 80008000
-28265ba8 00000014
-02265ba8 00000008
-e2000001 80008000
-28265ba8 00000015
-02265ba8 0000000c
-e2000001 80008000
-28265ba8 00000016
-02265ba8 00000044
-e2000001 80008000
-28265ba8 00000017
-02265ba8 00000036
-e2000001 80008000
-28265ba8 00000018
-02265ba8 0000001c
-e2000001 80008000
-28265ba8 00000019
-02265ba8 0000001f
-e2000001 80008000
-28265ba8 0000001a
-02265ba8 0000001d
-e2000001 80008000
-28265ba8 0000001e
-02265ba8 0000001e
-e2000001 80008000
-28265ba8 00000021
-02265ba8 00000020
-e2000001 80008000
-28265ba8 00000023
-02265ba8 00000024
-e2000001 80008000
-28265ba8 00000024
-02265ba8 00000024
-e2000001 80008000
-28265ba8 00000025
-02265ba8 00000051
-e2000001 80008000
-28265ba8 00000028
-02265ba8 00000028
-e2000001 80008000
-28265ba8 00000029
-02265ba8 00000028
-e2000001 80008000
-28265ba8 0000002a
-02265ba8 00000051
-e2000001 80008000
-28265ba8 0000002b
-02265ba8 00000027
-e2000001 80008000
-28265ba8 0000002c
-02265ba8 00000026
-e2000001 80008000
-28265ba8 0000002d
-02265ba8 0000000f
-e2000001 80008000
-28265ba8 0000002e
-02265ba8 0000004f
-e2000001 80008000
-28265ba8 0000002f
-02265ba8 0000004b
-e2000001 80008000
-28265ba8 00000030
-02265ba8 00000013
-e2000001 80008000
-28265ba8 00000031
-02265ba8 0000004a
-e2000001 80008000
-28265ba8 00000032
-02265ba8 0000003a
-e2000001 80008000
-28265ba8 00000033
-02265ba8 00000036
-e2000001 80008000
-28265ba8 00000035
-02265ba8 00000034
-e2000001 80008000
-28265ba8 00000038
-02265ba8 00000010
-e2000001 80008000
-28265ba8 00000039
-02265ba8 00000050
-e2000001 80008000
-28265ba8 0000003a
-02265ba8 0000003a
-e2000001 80008000
-28265ba8 0000003b
-02265ba8 0000003d
-e2000001 80008000
-28265ba8 0000003c
-02265ba8 0000003e
-e2000001 80008000
-28265ba8 0000003d
-02265ba8 0000003d
-e2000001 80008000
-28265ba8 0000003e
-02265ba8 0000003e
-e2000001 80008000
-28265ba8 0000003f
-02265ba8 00000046
-e2000001 80008000
-28265ba8 00000043
-02265ba8 00000043
-e2000001 80008000
-28265ba8 00000047
-02265ba8 0000004c
-e2000001 80008000
-04154348 60000000
-0418333c 2c030029
-0418342c 2c030029
-041834c4 2c030029
-c2183590 00000002
-38800029 7c8400d0
-60000000 00000000
-*Unfair Mario Party is a super Chaotic mode full of sweet Mario Party Tears!
-*
-*This Pack Includes
-*
-*1 Coin Blue Spaces
-*Lose 20 Coin Red Spaces
-*Random Path Decisions
-*Randomized Music
-*Mic ALWAYS On
-*41 Coin Stars
-*1-3 Dice Sluggish
-*
-*And a Crap Ton of Minigame Replacements to Screw with your RNG
-*
-*
-*
-*
-*
-*
-$Bonus - Warping Frenzy
-00265755 00000005
-00265756 000000FF
-00265757 000000FF
-0026585D 00000005
-0026585E 000000FF
-0026585F 000000FF
-00265965 00000005
-00265966 000000FF
-00265967 000000FF
-00265A6D 00000005
-00265A6E 000000FF
-00265A6F 000000FF
-*
-*
-*
+*This cheat makes the music selection totally random.
 *
 $Game Mechanics - Always Day [Ralf]
 02265b80  00000000
+*
 $Game Mechanics - Always Night [Ralf]
 02265b80  00004000
 *
@@ -405,12 +188,6 @@ $Minigame - Mass Meteor: Ties are Always Ties [gamemasterplc]
 e2000001 80008000
 *This cheat makes it so Mass Meteor is more balanced.
 *
-$Minigame - Mole it All: All Moles Worth 3 Points [gamemasterplc]
-204d57f0 a8a10008
-044d57f0 38a00003
-e2000001 80008000
-*This cheat makes it so Mole it All is more balanced.
-*
 $Minigame - Sink or Swim: Infinite Air [gamemasterplc]
 204cf1a4 3803ffff
 044cf1a4 38000258
@@ -432,12 +209,12 @@ c24fc478 00000003
 e2000001 80008000
 *This cheat makes it so Treasure Trawlers is more balanced.
 *
-$Minigame Replacement - Crate and Peril ➜ Snow Brawl
+$Minigame Replacement - Crate and Peril ➜ Snow Brawl [gamemasterplc]
 28265ba8  0000001f
 02265ba8  00000019
 e2000001  80008000
 *
-$Minigame Replacement - Insectiride ➜ Hyper Sniper
+$Minigame Replacement - Insectiride ➜ Hyper Sniper [gamemasterplc]
 28265ba8  0000002e
 02265ba8  0000002d
 e2000001  80008000
@@ -452,27 +229,45 @@ $Minigame Replacement - Pitifall ➜ Cog Jog [gamemasterplc]
 02265ba8 00000017
 e2000001 80008000
 *
-*
-*
-$Minigame Replacement - Ray of Fright ➜ Conveyor Bolt
+$Minigame Replacement - Ray of Fright ➜ Conveyor Bolt [gamemasterplc]
 28265ba8  00000020
 02265ba8  0000001e
 e2000001  80008000
 *
-$Minigame Replacement - Trap Ease Artist ➜ Pokey Punch-out
+$Minigame Replacement - Trap Ease Artist ➜ Pokey Punch-out [gamemasterplc]
 28265ba8  00000013
 02265ba8  00000014
 e2000001  80008000
 *
-$Minigame Replacement - Trick or Tree ➜ Boo Off the Stage [gamemasterplc]
+$Minigame Replacement - Trick or Tree ➜ Boo Off the Stage [gamemasterplc] [gamemasterplc]
 28265ba8 0000003d
 02265ba8 0000003b
 e2000001 80008000
 *
-$Minigame Replacement - Tricky Tires ➜ Cannonball Fun [gamemasterplc]
+$Minigame Replacement - Tricky Tires ➜ Cannonball Fun [gamemasterplc] [gamemasterplc]
 28265ba8 00000009
 02265ba8 0000000d
 e2000001 80008000
+*
+$Mod - 30Hz Code [gamemasterplc]
+042C0038 40000000
+042C003C 00000002
+040440F0 38600001
+C2005AB0 00000009
+3C808000 6084E37C
+7C8903A6 4E800421
+3C808000 60845D90
+7C8903A6 4E800421
+38800000 908D8900
+908D8904 38600001
+3C808000 6084E37C
+7C8903A6 4E800421
+60000000 00000000
+C2049194 00000002
+7C9F2378 7CA50E70
+60000000 00000000
+*Makes the game run at 30Hz but still feel like 60FPS. Great for people with bad PCs
+*Can break Certain Minigames
 *
 [Gecko_Enabled]
 $!!! - Faster Boot Time
@@ -483,5 +278,3 @@ $!!! - Increased Taunt Capabilities
 $!!! - Instant Text Display
 $!!! - Miscellaneous - Show Controller Port Number of Who Paused in Mini-Games
 $!!! - Super Fast Text Boxes
-$Game Mechanics - Same Space Duels Always Active
-$Minigame - Mass Meteor: Ties are Always Ties
