--- a/Data/User/GameSettings/RM8E01.ini
+++ b/Data/User/GameSettings/RM8E01.ini
@@ -1,8 +1,13 @@
-[OnLoad]
-# Add memory patches to be loaded once on boot here.
-[OnFrame]
-# Add memory patches to be applied every frame here.
+# ----------------------------------------------------
+# Mario Party Netplay's Mario Party 8 Cheat Database
+# Please visit: https://discord.com/invite/vMNjm98
+# And if you're looking at this, tell Sly hello!
+# ----------------------------------------------------
+
 [Gecko]
+$!!! - README
+*Mario Party 8 Cheats can cause the game to stop saving. Be Warned
+*Mario Party 8 Cheats can also cause unintended consiquences due to to hacky nature of specific codes.
 $!!! - Faster Boot [Celerizer]
 20744de4 a003de20
 04744dec 60000000
@@ -11,9 +16,7 @@ e2000001 80008000
 04741c48 60000000
 04741c14 60000000
 e2000001 80008000
-*
-*
-*
+*Use This Cheat to Get into the Action Faster
 *
 $!!! - Increased Board Speed [gamemasterplc]
 48000000 800030c8
@@ -144,7 +147,6 @@ de000000 80008180
 e0000000 80008000
 *This cheat makes the players move faster while playing a Mario Party board.
 *
-*
 $!!! - Increased Taunt Capabilities [gamemasterplc]
 48000000 800030c8
 de000000 80008180
@@ -190,19 +192,16 @@ de000000 80008180
 e0000000 80008000
 *This cheat makes it so you can taunt during your turn.
 *
-*
+$!!! - Increased Text Display [CrankySupertoon]
+0405DED4 60000000
+*This cheat makes it so text is displayed instantly.
 *
 $!!! - Minigame Crash Fix - Breakneck Building ➜ Rotation Station
 282287cc 00000032
 022287cc 0000003a
 e2000001 80008000
 *WARNING!
-*This game can CRASH Dolphin. Please Enable This
-*
-*
-*
-$!!! - Super Fast Text Boxes [CrankySupertoon]
-0405DED4 60000000
+*This game WILL softlock Dolphin. Please Enable This
 *
 $Board - DK's Treetop Temple: Free Cannon [CrankySupertoon]
 48000000 800030c8
@@ -212,6 +211,7 @@ de000000 80008180
 1401a160 2c040000
 e0000000 80008000
 *This cheat makes the cannon in DK's Treetop Temple Free
+*
 $Board - Goomba's Booty Boardwalk: Remove Dolphin Shuttles [gamemasterplc]
 2057bc40 437f0000
 0457bc3c 42700000
@@ -250,17 +250,10 @@ de000000 80008180
 e0000000 80008000
 *This cheat makes Stars cost nothing instead of the usual 20 coins.
 *
-*
 $Bonus - Kill Music [gamemasterplc]
 042CE168 00000001
 0404D9FC 60000000
 *
-$Bonus - Warping Frenzy [CrankySupertoon]
-c20457a8 00000003
-380004ff 90040008
-b0040006 4e800020
-60000000 00000000
-*Chaotic Warping during your turns. Can only pick from a Springo Candy or your Dice. Everything else is Disabled
 $Game Mechanics - Cashzap Candy Steals Coins [gamemasterplc]
 48000000 800030c8
 de000000 80008180
@@ -342,9 +335,8 @@ c0000000 00000010
 80a10018 80c1001c
 80e10020 38210024
 4e800020 00000000
-*Sorry Rumtin
-*
 *Replaces Duelo Candy with Twice Candy
+*
 $Game Mechanics - Disable Lucky Spaces [gamemasterplc]
 48000000 800030c8
 de000000 80008180
@@ -377,6 +369,7 @@ de000000 80008180
 1401077c 4e800020
 e0000000 80008000
 *This cheat disables the overpowered Lucky Spaces.
+*This cheat will also disable certain happening spaces dueo to the level of assembly needed for this patch.
 *
 $Game Mechanics - Disable Slogo Candy [CrankySupertoon, Rain, jdaster]
 c0000000 00000010
@@ -551,22 +544,22 @@ de000000 80008180
 e0000000 80008000
 *This cheat makes it so Surfs Way Up is more balanced
 *
-$Minigame Replacement - Bob-ombs Away ➜ Power Trip
+$Minigame Replacement - Bob-ombs Away ➜ Power Trip [gamemasterplc]
 282287CC 00000012
 022287CC 00000011
 E2000001 80008000
 *
-$Minigame Replacement - Cardiators ➜ Frozen Assets
+$Minigame Replacement - Cardiators ➜ Frozen Assets [gamemasterplc]
 282287CC 00000039
 022287CC 00000031
 E2000001 80008000
 *
-$Minigame Replacement - Cut from the Team ➜ Snipe for the Picking
+$Minigame Replacement - Cut from the Team ➜ Snipe for the Picking [gamemasterplc]
 282287CC 00000024
 022287CC 00000025
 E2000001 80008000
 *
-$Minigame Replacement - Glacial Meltdown ➜ Saucer Swarm
+$Minigame Replacement - Glacial Meltdown ➜ Saucer Swarm [gamemasterplc]
 282287CC 00000027
 022287CC 00000026
 E2000001 80008000
@@ -577,22 +570,22 @@ $Minigame Replacement - Gun the Runner ➜ Snow Way Out [gamemasterplc]
 e2000001 80008000
 *
 *
-$Minigame Replacement - Specter Inspector ➜ Loco Motives
+$Minigame Replacement - Specter Inspector ➜ Loco Motives [gamemasterplc]
 282287CC 00000030
 022287CC 0000002F
 E2000001 80008000
 *
-$Minigame Replacement - Thrash 'n' Crash ➜ Swervin' Skies
+$Minigame Replacement - Thrash 'n' Crash ➜ Swervin' Skies [gamemasterplc]
 282287CC 00000016
 022287CC 00000013
 E2000001 80008000
 *
-$Minigame Replacement - You're the Bob-omb ➜ Lava Lobbers
+$Minigame Replacement - You're the Bob-omb ➜ Lava Lobbers [gamemasterplc]
 282287CC 00000037
 022287CC 0000002E
 E2000001 80008000
 *
-$!!! - GC Mod Fixes
+$Mod - GC Mod Fixes
 04106A24 83DE6404
 04106A28 60000000
 282287cc 00000003
@@ -606,7 +599,5 @@ e2000001 80008000
 $!!! - Faster Boot
 $!!! - Increased Board Speed
 $!!! - Increased Taunt Capabilities
+$!!! - Increased Text Display
 $!!! - Minigame Crash Fix - Breakneck Building ➜ Rotation Station
-$!!! - Super Fast Text Boxes
-$Game Mechanics - Disable Lucky Spaces
-$!!! - GC Mod Fixes
