--- a/Data/User/GameSettings/SSQE01.ini
+++ b/Data/User/GameSettings/SSQE01.ini
@@ -1,13 +1,13 @@
-[Core]
-OverclockEnable = False
-[Video_Hardware]
-VSync = False
-[Video_Hacks]
-EFBToTextureEnable = False
+# ----------------------------------------------------
+# Mario Party Netplay's Mario Party 9 Cheat Database
+# Please visit: https://discord.com/invite/vMNjm98
+# And if you're looking at this, tell Sly hello!
+# ----------------------------------------------------
 [Gecko]
 $Enable 1 Vs Rivals Minigames With 2 Players [gamemasterplc]
 20372424 38000002
 04372414 60000000
 E2000001 80008000
+
 [Gecko_Enabled]
 $Enable 1 Vs Rivals Minigames With 2 Players
