--- a/Source/Core/Core/Core.vcxproj.filters
+++ b/Source/Core/Core/Core.vcxproj.filters
@@ -1014,6 +1014,9 @@
     <ClCompile Include="API\Gui.cpp">
       <Filter>API</Filter>
     </ClCompile>
+    <ClCompile Include="API\Controller.cpp">
+      <Filter>API</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BootManager.h" />
@@ -1777,6 +1780,9 @@
       <Filter>API</Filter>
     </ClInclude>
     <ClInclude Include="API\Gui.h">
+      <Filter>API</Filter>
+    </ClInclude>
+    <ClInclude Include="API\Controller.h">
       <Filter>API</Filter>
     </ClInclude>
   </ItemGroup>
