Revert "Netplay: Game no longer closes on others crash"
This reverts commit 794b8878f0633ec0b2ea8277728af52f75dc8e00.

Signed-off-by: CrankySupertoon <crankysupertoon@gmail.com>

--- a/Data/User/GameSettings/RM8E01.ini
+++ b/Data/User/GameSettings/RM8E01.ini
@@ -595,6 +595,11 @@ e2000001 80008000
 022287cc 0000000a
 e2000001 80008000
 *
+$Mod - Remove Explanations
+82200001 80228760
+86300001 ffffbfff
+84200001 80228760
+*
 [Gecko_Enabled]
 $!!! - Faster Boot
 $!!! - Increased Board Speed
