--- a/.travis.yml
+++ b/.travis.yml
@@ -2,19 +2,19 @@ sudo: false
 language: cpp
 compiler:
   - gcc
-  - clang
 addons:
   apt:
     sources:
     - ubuntu-toolchain-r-test
-    - llvm-toolchain-precise-3.8
     packages:
     - g++-6
-    - clang-3.8
+    - cmake
 install:
 - "[ $CXX = g++ ] && export CXX=g++-6 || true"
 - "[ $CXX = clang++ ] && export CXX=clang++-3.8 || true"
 script:
+  - mkdir build && cd build
+  - cmake ..
   - make
   - make test
 
