--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ addons:
 install:
 - "[ $CXX = g++ ] && export CXX=g++-8 || true"
 - "[ $CXX = clang++ ] && export CXX=clang++-3.8 || true"
+- mkdir -p "$HOME/.ccache"
 - docker pull quriouspixel/yuzu:latest
 - docker run -u root --env-file travis/common/travis-ci.env -v $(pwd):/dolphin -v "$HOME/.ccache":/root/.ccache quriouspixel/yuzu:latest /bin/bash /dolphin/travis/appimage/docker.sh
 script:
